# pyodim

./: ENHANCEMENTS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release_to_pypi.yml  security.yml  test.yml
examples/: enhanced_usage.py
pyodim/: __init__.py  exceptions.py  pyodim.py  validation.py  write_odim.py
test/: test_exceptions.py  test_pyodim.py  test_validation.py  test_write_odim.py
