[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyodim"
dynamic = ["version"]
description = "An Odim hdf5 file reader."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Valentin Louf", email = "valentin.louf@bom.gov.au"}
]
maintainers = [
    {name = "Valentin Louf", email = "valentin.louf@bom.gov.au"}
]
keywords = ["odim", "h5", "radar", "file", "reader"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.21.0",
    "dask>=2020.12.0",
    "xarray>=0.18.0",
    "pyproj>=3.1.0",
    "h5py>=3.0",
]

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/vlouf/pyodim"
Repository = "https://github.com/vlouf/pyodim"

[tool.setuptools]
packages = ["pyodim"]

[tool.setuptools.dynamic]
version = {attr = "pyodim.__version__.__version__"}

[tool.setuptools.package-data]
pyodim = ["**/*"]